library/src/libqaccessible.h

typedef QAccessible::State QAccessible__State;
typedef struct QAccessibleActionInterface QAccessibleActionInterface;
typedef struct QAccessibleEvent QAccessibleEvent;
typedef struct QAccessibleHyperlinkInterface QAccessibleHyperlinkInterface;
typedef struct QAccessibleImageInterface QAccessibleImageInterface;
typedef struct QAccessibleInterface QAccessibleInterface;
typedef struct QAccessibleStateChangeEvent QAccessibleStateChangeEvent;
typedef struct QAccessibleTableInterface QAccessibleTableInterface;
typedef struct QAccessibleTableModelChangeEvent QAccessibleTableModelChangeEvent;
typedef struct QAccessibleTextCursorEvent QAccessibleTextCursorEvent;
typedef struct QAccessibleTextInsertEvent QAccessibleTextInsertEvent;
typedef struct QAccessibleTextSelectionEvent QAccessibleTextSelectionEvent;
typedef struct QAccessible__State QAccessible__State;
typedef struct QObject QObject;
typedef struct QPoint QPoint;
typedef struct QSize QSize;
QTLIBC_API QAccessibleInterface* QAccessibleTableInterface_Caption(const QAccessibleTableInterface* self);
QTLIBC_API QAccessibleInterface* QAccessibleTableInterface_Summary(const QAccessibleTableInterface* self);
QTLIBC_API QAccessibleInterface* QAccessibleTableInterface_CellAt(const QAccessibleTableInterface* self, int row, int column);
QTLIBC_API int QAccessibleTableInterface_SelectedCellCount(const QAccessibleTableInterface* self);
QTLIBC_API libqt_list /* of QAccessibleInterface* */ QAccessibleTableInterface_SelectedCells(const QAccessibleTableInterface* self);
QTLIBC_API libqt_string QAccessibleTableInterface_ColumnDescription(const QAccessibleTableInterface* self, int column);
QTLIBC_API libqt_string QAccessibleTableInterface_RowDescription(const QAccessibleTableInterface* self, int row);
QTLIBC_API int QAccessibleTableInterface_SelectedColumnCount(const QAccessibleTableInterface* self);
QTLIBC_API int QAccessibleTableInterface_SelectedRowCount(const QAccessibleTableInterface* self);
QTLIBC_API int QAccessibleTableInterface_ColumnCount(const QAccessibleTableInterface* self);
QTLIBC_API int QAccessibleTableInterface_RowCount(const QAccessibleTableInterface* self);
QTLIBC_API libqt_list /* of int */ QAccessibleTableInterface_SelectedColumns(const QAccessibleTableInterface* self);
QTLIBC_API libqt_list /* of int */ QAccessibleTableInterface_SelectedRows(const QAccessibleTableInterface* self);
QTLIBC_API bool QAccessibleTableInterface_IsColumnSelected(const QAccessibleTableInterface* self, int column);
QTLIBC_API bool QAccessibleTableInterface_IsRowSelected(const QAccessibleTableInterface* self, int row);
QTLIBC_API bool QAccessibleTableInterface_SelectRow(QAccessibleTableInterface* self, int row);
QTLIBC_API bool QAccessibleTableInterface_SelectColumn(QAccessibleTableInterface* self, int column);
QTLIBC_API bool QAccessibleTableInterface_UnselectRow(QAccessibleTableInterface* self, int row);
QTLIBC_API bool QAccessibleTableInterface_UnselectColumn(QAccessibleTableInterface* self, int column);
QTLIBC_API void QAccessibleTableInterface_ModelChange(QAccessibleTableInterface* self, QAccessibleTableModelChangeEvent* event);
QTLIBC_API libqt_string QAccessibleActionInterface_Tr(const char* sourceText);
QTLIBC_API libqt_list /* of libqt_string */ QAccessibleActionInterface_ActionNames(const QAccessibleActionInterface* self);
QTLIBC_API libqt_string QAccessibleActionInterface_LocalizedActionName(const QAccessibleActionInterface* self, libqt_string name);
QTLIBC_API libqt_string QAccessibleActionInterface_LocalizedActionDescription(const QAccessibleActionInterface* self, libqt_string name);
QTLIBC_API void QAccessibleActionInterface_DoAction(QAccessibleActionInterface* self, libqt_string actionName);
QTLIBC_API libqt_list /* of libqt_string */ QAccessibleActionInterface_KeyBindingsForAction(const QAccessibleActionInterface* self, libqt_string actionName);
QTLIBC_API libqt_string QAccessibleActionInterface_PressAction();
QTLIBC_API libqt_string QAccessibleActionInterface_IncreaseAction();
QTLIBC_API libqt_string QAccessibleActionInterface_DecreaseAction();
QTLIBC_API libqt_string QAccessibleActionInterface_ShowMenuAction();
QTLIBC_API libqt_string QAccessibleActionInterface_SetFocusAction();
QTLIBC_API libqt_string QAccessibleActionInterface_ToggleAction();
QTLIBC_API libqt_string QAccessibleActionInterface_ScrollLeftAction();
QTLIBC_API libqt_string QAccessibleActionInterface_ScrollRightAction();
QTLIBC_API libqt_string QAccessibleActionInterface_ScrollUpAction();
QTLIBC_API libqt_string QAccessibleActionInterface_ScrollDownAction();
QTLIBC_API libqt_string QAccessibleActionInterface_NextPageAction();
QTLIBC_API libqt_string QAccessibleActionInterface_PreviousPageAction();
QTLIBC_API void QAccessibleActionInterface_OperatorAssign(QAccessibleActionInterface* self, QAccessibleActionInterface* param1);
QTLIBC_API libqt_string QAccessibleActionInterface_Tr2(const char* sourceText, const char* disambiguation);
QTLIBC_API libqt_string QAccessibleActionInterface_Tr3(const char* sourceText, const char* disambiguation, int n);
QTLIBC_API libqt_string QAccessibleImageInterface_ImageDescription(const QAccessibleImageInterface* self);
QTLIBC_API QSize* QAccessibleImageInterface_ImageSize(const QAccessibleImageInterface* self);
QTLIBC_API QPoint* QAccessibleImageInterface_ImagePosition(const QAccessibleImageInterface* self);
QTLIBC_API void QAccessibleImageInterface_OperatorAssign(QAccessibleImageInterface* self, QAccessibleImageInterface* param1);
QTLIBC_API libqt_string QAccessibleHyperlinkInterface_Anchor(const QAccessibleHyperlinkInterface* self);
QTLIBC_API libqt_string QAccessibleHyperlinkInterface_AnchorTarget(const QAccessibleHyperlinkInterface* self);
QTLIBC_API int QAccessibleHyperlinkInterface_StartIndex(const QAccessibleHyperlinkInterface* self);
QTLIBC_API int QAccessibleHyperlinkInterface_EndIndex(const QAccessibleHyperlinkInterface* self);
QTLIBC_API bool QAccessibleHyperlinkInterface_IsValid(const QAccessibleHyperlinkInterface* self);
QTLIBC_API void QAccessibleHyperlinkInterface_OperatorAssign(QAccessibleHyperlinkInterface* self, QAccessibleHyperlinkInterface* param1);
QTLIBC_API QAccessibleEvent* QAccessibleEvent_new(QObject* obj, int typ);
QTLIBC_API QAccessibleEvent* QAccessibleEvent_new2(QAccessibleInterface* iface, int typ);
QTLIBC_API int QAccessibleEvent_Type(const QAccessibleEvent* self);
QTLIBC_API QObject* QAccessibleEvent_Object(const QAccessibleEvent* self);
QTLIBC_API unsigned int QAccessibleEvent_UniqueId(const QAccessibleEvent* self);
QTLIBC_API void QAccessibleEvent_SetChild(QAccessibleEvent* self, int chld);
QTLIBC_API int QAccessibleEvent_Child(const QAccessibleEvent* self);
QTLIBC_API QAccessibleInterface* QAccessibleEvent_AccessibleInterface(const QAccessibleEvent* self);
QTLIBC_API QAccessibleStateChangeEvent* QAccessibleStateChangeEvent_new(QObject* obj, QAccessible__State* state);
QTLIBC_API QAccessibleStateChangeEvent* QAccessibleStateChangeEvent_new2(QAccessibleInterface* iface, QAccessible__State* state);
QTLIBC_API QAccessible__State* QAccessibleStateChangeEvent_ChangedStates(const QAccessibleStateChangeEvent* self);
QTLIBC_API QAccessibleTextCursorEvent* QAccessibleTextCursorEvent_new(QObject* obj, int cursorPos);
QTLIBC_API QAccessibleTextCursorEvent* QAccessibleTextCursorEvent_new2(QAccessibleInterface* iface, int cursorPos);
QTLIBC_API void QAccessibleTextCursorEvent_SetCursorPosition(QAccessibleTextCursorEvent* self, int position);
QTLIBC_API int QAccessibleTextCursorEvent_CursorPosition(const QAccessibleTextCursorEvent* self);
QTLIBC_API QAccessibleTextSelectionEvent* QAccessibleTextSelectionEvent_new(QObject* obj, int start, int end);
QTLIBC_API QAccessibleTextSelectionEvent* QAccessibleTextSelectionEvent_new2(QAccessibleInterface* iface, int start, int end);
QTLIBC_API void QAccessibleTextSelectionEvent_SetSelection(QAccessibleTextSelectionEvent* self, int start, int end);
QTLIBC_API int QAccessibleTextSelectionEvent_SelectionStart(const QAccessibleTextSelectionEvent* self);
QTLIBC_API int QAccessibleTextSelectionEvent_SelectionEnd(const QAccessibleTextSelectionEvent* self);
QTLIBC_API QAccessibleTextInsertEvent* QAccessibleTextInsertEvent_new(QObject* obj, int position, libqt_string text);
QTLIBC_API QAccessibleTextInsertEvent* QAccessibleTextInsertEvent_new2(QAccessibleInterface* iface, int position, libqt_string text);
QTLIBC_API libqt_string QAccessibleTextInsertEvent_TextInserted(const QAccessibleTextInsertEvent* self);
QTLIBC_API int QAccessibleTextInsertEvent_ChangePosition(const QAccessibleTextInsertEvent* self);